[package]
name = "tobq"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcp-bigquery-client = { path = "/home/seeyarh/src/github.com/seeyarh/gcp-bigquery-client" }
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = {  version = "0.1.7", features = ["io-util"] }
serde = "1.0.123"
serde_json = "1.0.63"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
